--- a/app/templates/gen.html
+++ b/app/templates/gen.html
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="panel panel-default">
             <a style="text-decoration: none;" href="/user/general/{{general.id}}">
-                <h4>{{general.post}}</h4>
+                <h4>{{general.pitch}}</h4>
             </a>
             <h5>by {{general.user.username}}</h5>
         </div>
