--- a/app/templates/misc.html
+++ b/app/templates/misc.html
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="panel panel-default">
             <a style="text-decoration: none;" href="/user/music/{{music.id}}">
-                <h4>{{music.post}}</h4>
+                <h4>{{music.pitch}}</h4>
             </a>
             <h5>by {{music.user.username}}</h5>
         </div>
