--- a/app/templates/proj.html
+++ b/app/templates/proj.html
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="panel panel-default">
             <a style="text-decoration: none;" href="/user/project/{{project.id}}">
-                <h4>{{project.post}}</h4>
+                <h4>{{project.pitch}}</h4>
             </a>
             <h5>by {{project.user.username}}</h5>
         </div>
