--- a/app/templates/seduct.html
+++ b/app/templates/seduct.html
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="panel panel-default">
             <a style="text-decoration: none;" href="/user/seduction/{{seduction.id}}">
-                <h4>{{seduction.post}}</h4>
+                <h4>{{seduction.pitch}}</h4>
             </a>
             <h5>by {{seduction.user.username}}</h5>
         </div>
