--- a/app/templates/advert.html
+++ b/app/templates/advert.html
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="panel panel-default">
             <a style="text-decoration: none;" href="/user/advertisement/{{advertisement.id}}">
-                <h4>{{advertisement.post}}</h4>
+                <h4>{{advertisement.pitch}}</h4>
             </a>
             <h5>by {{advertisement.user.username}}</h5>
         </div>
