--- a/app/templates/advertpitch.html
+++ b/app/templates/advertpitch.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% import 'bootstrap/wtf.html' as wtf%} {% block content %}
 <div class="container-fluid">
     <div>
-        <h2>{{advertisement.post}}</h2>
+        <h2>{{advertisement.pitch}}</h2>
     </div>
     <div>
         <p>{{advertisement.body}}</p>
