--- a/app/templates/inter.html
+++ b/app/templates/inter.html
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="panel panel-default">
             <a style="text-decoration: none;" href="/user/interview/{{interview.id}}">
-                <h4>{{interview.post}}</h4>
+                <h4>{{interview.pitch}}</h4>
             </a>
             <h5>by {{interview.user.username}}</h5>
         </div>
