--- a/app/templates/musicpitch.html
+++ b/app/templates/musicpitch.html
@@ -3,7 +3,7 @@
 {% extends 'base.html' %} {% import 'bootstrap/wtf.html' as wtf%} {% block content %}
 <div class="container-fluid">
     <div>
-        <h2>{{music.post}}</h2>
+        <h2>{{music.pitch}}</h2>
     </div>
     <div>
         <p>{{music.body}}</p>
