--- a/app/templates/nterviewpitch.html
+++ b/app/templates/nterviewpitch.html
@@ -3,7 +3,7 @@
 {% extends 'base.html' %} {% import 'bootstrap/wtf.html' as wtf%} {% block content %}
 <div class="container-fluid">
     <div>
-        <h2>{{interview.post}}</h2>
+        <h2>{{interview.pitch}}</h2>
     </div>
     <div>
         <p>{{interview.body}}</p>
