--- a/app/templates/sal.html
+++ b/app/templates/sal.html
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="panel panel-default">
             <a style="text-decoration: none;" href="/user/sale/{{sale.id}}">
-                <h4>{{sale.post}}</h4>
+                <h4>{{sale.pitch}}</h4>
             </a>
             <h5>by {{sale.user.username}}</h5>
         </div>
